the_project/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
